# magene-proxy

./: Cargo.toml  README  README.md  main.py  proxy.py
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: config.rs  errors.rs  led.rs  lib.rs  messages.rs
src/bluetooth/: central.rs  manager.rs  mod.rs  peripheral.rs  scan.rs  utils.rs
